# GHIDRA-NO-MCP

./: .gitignore  README.md  pyproject.toml
src/ghidra_no_mcp/: __main__.py  cli.py  exporter.py
