[project]
name = "ghidra-no-mcp"
version = "0.1.0"
description = "Export Ghidra analysis for AI - No MCP"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "gxenos"}]
keywords = ["ghidra", "reverse-engineering", "decompilation", "ai"]
dependencies = [
    "ghidra-stubs>=12.0.2",
    "pyghidra>=3.0.2",
]

[project.scripts]
ghidra-no-mcp = "ghidra_no_mcp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
